[workspace]
members = [
    "contracts/locked-astroport-vault",
    "test-helpers"
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "BUSL-1.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
apollo-cw-asset         = "0.1.2"
apollo-utils            = "0.1.1"
cosmwasm-schema         = "1.1.0"
cosmwasm-std            = "1.5.5"
cw-dex                  = { git = "https://github.com/apollodao/cw-dex.git", rev = "1bc26423607bfaee59d059e608c8460d42646291" }
cw-dex-astroport        = { git = "https://github.com/apollodao/cw-dex.git", rev = "1bc26423607bfaee59d059e608c8460d42646291" }
cw-ownable              = "0.5.1"
cw-storage-plus         = "1.1.0"
cw-utils                = "1.0.1"
cw-vault-standard       = { version = "0.3.3", features = ["lockup", "force-unlock"] }
cw2                     = "1.1.0"
cw20                    = "1.1.0"
osmosis-std             = "0.14"
thiserror               = "1.0.43"
cw-dex-router           = { git = "https://github.com/apollodao/cw-dex-router.git", rev = "dd8aa8c5d608967b98a3fad47edd78f7f3c8c824", features = ["library", "astroport"] }
strum                   = { version = "0.25.0", features = ["derive"] }
liquidity-helper        = { git = "https://github.com/apollodao/liquidity-helpers.git", rev = "cb9a8918a916b7e98199e728970acd4cbe06132e" }
cw-item-set             = { version = "0.7.1", default-features = false, features = ["iterator"] }
cw-address-like         = "1.0.4"
optional_struct         = "0.3.1"
serde                   = "1.0.171"
schemars                = "0.8.12"
semver                  = "1.0.21"
astroport_v5 = { package = "astroport", version = "5.2.0" }

# Repo packages
locked-astroport-vault  = { version = "0.5.0", path = "./contracts/locked-astroport-vault" }
locked-astroport-vault-test-helpers = { path = "./test-helpers" }

# Dev dependencies
cw-it = { git = "https://github.com/apollodao/cw-it.git", rev = "362c71a8f1603622ce291b2c49da093c02caeaec", features = ["astroport"]}
cw-vault-standard-test-helpers      = { git = "https://github.com/apollodao/cw-vault-standard.git", rev = "f415c0b3d6265719162224557b209dfe649de8a7",  features = ["lockup", "force-unlock"] }
proptest                            = "1.2.0"
test-case                           = "3.1.0"
astroport-liquidity-helper          = { path = "../liquidity-helpers/contracts/astroport-liquidity-helper" } #= { git = "https://github.com/apollodao/liquidity-helpers.git", package = "astroport-liquidity-helper", rev = "cb9a8918a916b7e98199e728970acd4cbe06132e" }
apollo-cw-multi-test = { git = "https://github.com/apollodao/cw-multi-test.git", rev = "7e7bc2b91a8199c47815b45ef23b3ab07390ae3a",features = ["stargate"] }
