[workspace]
members = [
    "contracts/locked-astroport-vault",
    "test-helpers"
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "BUSL-1.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
apollo-cw-asset         = "0.1.2"
apollo-utils            = "0.1.1"
cosmwasm-schema         = "1.1.0"
cosmwasm-std            = "1.5.5"
cw-dex-astroport        = { version = "0.3.0-rc.2" }
cw-ownable              = "0.5.1"
cw-storage-plus         = "1.1.0"
cw-utils                = "1.0.1"
cw-vault-standard       = { version = "0.4.1-rc.1", features = ["lockup", "force-unlock"] }
cw2                     = "1.1.0"
cw20                    = "1.1.0"
osmosis-std             = "0.14"
thiserror               = "1.0.43"
cw-dex-router           = { version = "0.5.0-rc.1", features = ["library", "astroport"] }
strum                   = { version = "0.25.0", features = ["derive"] }
liquidity-helper        = "0.4.0-rc.2"
cw-item-set             = { version = "0.7.1", default-features = false, features = ["iterator"] }
cw-address-like         = "1.0.4"
optional_struct         = "0.3.1"
serde                   = "1.0.171"
schemars                = "0.8.12"
semver                  = "1.0.21"
astroport_v5 = { package = "astroport", version = "5.3.0" }

# Repo packages
locked-astroport-vault  = { version = "0.5.0", path = "./contracts/locked-astroport-vault" }
locked-astroport-vault-test-helpers = { path = "./test-helpers" }

# Dev dependencies
cw-it                               = { version = "0.4.0-rc.10", features = ["astroport"] }
cw-vault-standard-test-helpers      = { version = "0.5.0-rc.1", features = ["lockup", "force-unlock"] }
proptest                            = "1.2.0"
test-case                           = "3.1.0"
astroport-liquidity-helper          = "0.4.0-rc.2"
