[package]
name = "locked-astroport-vault-test-helpers"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
apollo-cw-asset                 = { workspace = true }
cosmwasm-std                    = { workspace = true }
cosmwasm-schema                 = { workspace = true }
cw20                            = { workspace = true }
cw-dex                          = { workspace = true, features = ["astroport"] }
cw-dex-router                   = { workspace = true }
cw-it                           = { workspace = true, features = ["astroport"] }
cw-vault-standard-test-helpers  = { workspace = true, features = ["lockup", "force-unlock"] }
locked-astroport-vault          = { workspace = true }
liquidity-helper                = { workspace = true }