[package]
name        = "locked-astroport-vault-test-helpers"
description = "Test helpers for the locked-astroport-vault contract"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }

[features]
osmosis-test-tube = ["cw-it/osmosis-test-tube"]

[dependencies]
apollo-cw-asset                 = { workspace = true }
cosmwasm-std                    = { workspace = true }
cosmwasm-schema                 = { workspace = true }
cw20                            = { workspace = true }
cw-dex                          = { workspace = true, features = ["astroport"] }
cw-dex-astroport                = { workspace = true }
cw-dex-router                   = { workspace = true }
cw-it                           = { workspace = true, features = ["astroport", "astroport-multi-test"] }
cw-vault-standard-test-helpers  = { workspace = true, features = ["lockup", "force-unlock"] }
locked-astroport-vault          = { workspace = true }
liquidity-helper                = { workspace = true }
cw-ownable                      = { workspace = true }
cw2                             = { workspace = true }
astroport-liquidity-helper      = { workspace = true }
cw-vault-standard               = { workspace = true }
cw-utils                        = { workspace = true }
