[package]
name          = "locked-astroport-vault"
description   = "Auto compounding vault, with a custom length lockup, for an Astroport pool"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.13.0
"""
optimize-arm64 = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer-arm64:0.13.0
"""

[dependencies]
apollo-cw-asset     = { workspace = true }
apollo-utils        = { workspace = true }
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-dex              = { workspace = true, features = ["astroport"] }
cw-ownable          = { workspace = true }
cw-storage-plus     = { workspace = true }
cw-utils            = { workspace = true }
cw-vault-standard   = { workspace = true, features = ["lockup", "force-unlock"] }
cw2                 = { workspace = true }
cw20                = { workspace = true }
osmosis-std         = { workspace = true }
thiserror           = { workspace = true }
cw-dex-router       = { workspace = true, features = ["library"] }
strum               = { workspace = true, features = ["derive"] }
liquidity-helper    = { workspace = true }
cw-item-set         = { workspace = true }
cw-address-like     = { workspace = true }
optional_struct     = { workspace = true }
serde               = { workspace = true }
schemars            = { workspace = true }

[dev-dependencies]
cw-it                           = { workspace = true, features = ["astroport"] }
cw-vault-standard-test-helpers  = { workspace = true, features = ["lockup", "force-unlock"] }
proptest                        = { workspace = true }
test-case                       = { workspace = true }
locked-astroport-vault-test-helpers = { workspace = true }
