[package]
name          = "locked-astroport-vault"
description   = "Auto compounding vault, with a custom length lockup, for an Astroport pool"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# Enables running tests against the OsmosisTestApp.
# Disabled by default as it breaks vs-code debugging via multi-test.
osmosis-test-tube = ["cw-it/osmosis-test-tube", "locked-astroport-vault-test-helpers/osmosis-test-tube"]

[dependencies]
apollo-cw-asset     = { workspace = true }
apollo-utils        = { workspace = true }
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-dex              = { workspace = true, features = ["astroport"] }
cw-ownable          = { workspace = true }
cw-storage-plus     = { workspace = true }
cw-utils            = { workspace = true }
cw-vault-standard   = { workspace = true, features = ["lockup", "force-unlock"] }
cw2                 = { workspace = true }
cw20                = { workspace = true }
osmosis-std         = { workspace = true }
thiserror           = { workspace = true }
cw-dex-router       = { workspace = true, features = ["library"] }
strum               = { workspace = true, features = ["derive"] }
liquidity-helper    = { workspace = true }
cw-item-set         = { workspace = true }
cw-address-like     = { workspace = true }
optional_struct     = { workspace = true }
serde               = { workspace = true }
schemars            = { workspace = true }
semver              = { workspace = true }

locked-astroport-vault_0_2_0 = { package = "locked-astroport-vault", version = "0.2.0", features = ["library"] }

[dev-dependencies]
cw-it                               = { workspace = true, features = ["astroport"] }
cw-vault-standard-test-helpers      = { workspace = true, features = ["lockup", "force-unlock"] }
proptest                            = { workspace = true }
test-case                           = { workspace = true }
locked-astroport-vault-test-helpers = { workspace = true }

